--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -16,10 +16,12 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 14px;
 	font: inherit;
 	vertical-align: baseline;
+	font-family:'Nanum Gothic', sans-serif;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -40,9 +42,29 @@ q:before, q:after {
 	content: none;
 }
 table {
+	width:100%;
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
-/* */
-h1 {font-size:45px;}
+
+input {height:25px;padding:0 5px;background:#fff;border:1px solid #bbb;vertical-align:middle;}
+select {height:27px;padding:0 5px;}
+
+/* 회원가입 테이블 */
+.tbl {border-top:2px solid #bbb;}
+.tbl th, .tbl td {padding:12px 10px;vertical-align:middle;border-bottom:1px solid #bbb;}
+.tbl th {color:#333;font-weight:bold;background:#f6f6f6;border-right:1px solid #bbb;}
+.address {display:block;margin-top:10px;}
+.address input{width:45%;}
+.required {position:relative;}
+.required:before {content:'*';display:block;position:absolute;left:-12px;top:1px;color:#f71a34;}
+.tblInfo {margin-bottom:10px;text-align:right;}
+.tblInfo span {display:inline-block;color:#f71a34;font-weight:bold;}
+
+
+.btnGroup {margin-top:30px;text-align:center;}
+.btn {padding:10px 20px;margin-right:3px;min-width:110px;height:auto;font-size:16px;line-height:21px;cursor:pointer;}
+.blue {background:#042f6c;color:#fff;border:1px solid #042f6c;}
+.gray {background:#ddd;}
+.small {padding:2px 0 1px;font-size:13px;}
