제품상세페이지 수정

--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -98,7 +98,17 @@ select {height:27px;padding:0 5px;}
 
 .btnGroup {margin-top:30px;text-align:center;}
 .btn {padding:10px 20px;margin-right:3px;min-width:110px;height:auto;font-size:16px;line-height:21px;cursor:pointer;}
-.blue {background:#ffba00;color:#fff;border:1px solid #DBA901;}
+.yellow {background:#ffba00;color:#fff;border:1px solid #DBA901;}
 .gray {background:#F2F2F2;}
 .small {padding:2px 0 1px;font-size:13px;}
 .contents h1{text-align: center; font-weight: bold; font-size: 20px;}
+
+/* 제품 상세 */
+.proView {display:table;}
+.proView .imgSec, .proView dl {display:table-cell;vertical-align:middle;}
+.imgSec img {width:300px;}
+.proView dl {overflow:hidden; padding-left:50px;}
+.proView dl dt {width:20%;margin-top:20px;font-weight:bold;}
+.proView dl dd {width:70%;}
+
+.alignC {text-align:center;}    
