--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -69,7 +69,24 @@ select {height:27px;padding:0 5px;}
 .topmenu li{display: inline-block; margin:10px; }
 .topmenu img{filter:invert(100%);}
 .topmenu ul{text-align: right; margin-right: 70px;}
+#search{
+    width: 30px;
+    box-sizing: border-box;
+    background-color: #fff;
+    border-radius: 4px;
+    font-size: 16px;    
+    background-image: url("images/icon/search.png");
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    margin: 5px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
 
+#search:focus {
+    width: 100px;
+	background-color: white;
+}
 .side {width:308px; float:left;}
 .side li{ margin:20px;}
 .side a {
