--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -99,7 +99,7 @@ select {height:27px;padding:0 5px;}
      text-decoration:underline; 
      font-weight: bold;
 }
-.body {width:992px; float:right;}
+.body {width:calc(100% - 308px); float:right;}
 .contents {background:#fff; padding:20px;min-height:700px;}
 
 
@@ -130,8 +130,9 @@ a.gray{color:#333;}
 /* 제품 상세 */
 .proView {display:table;padding-left:50px;}
 .proView .imgSec, .proView dl {display:table-cell;vertical-align:middle;}
+.imgSec {width:40%;text-align:center;}
 .imgSec img {width:300px;}
-.proView dl {overflow:hidden;padding-left:50px;}
+.proView dl {overflow:hidden;width:60%;}
 .proView dl dt, .proView dl dd {display:inline-block;}
 .proView dl dt {width:20%;margin-top:20px;font-weight:bold;}
 .proView dl dd {width:70%;}
